--- a/db/cardano-sl-db.cabal
+++ b/db/cardano-sl-db.cabal
@@ -13,6 +13,7 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
+  hs-source-dirs:      src
   exposed-modules:     Pos.DB
                        Pos.DB.BatchOp
                        Pos.DB.Class
