CDEC-461: Invert dependency between txp and db packages

--- a/auxx/cardano-sl-auxx.cabal
+++ b/auxx/cardano-sl-auxx.cabal
@@ -132,6 +132,7 @@ executable cardano-auxx
                      , cardano-sl-auxx
                      , cardano-sl-core
                      , cardano-sl-crypto
+                     , cardano-sl-db
                      , cardano-sl-infra
                      , cardano-sl-txp
                      , cardano-sl-util
