--- a/db/cardano-sl-db.cabal
+++ b/db/cardano-sl-db.cabal
@@ -29,29 +29,55 @@ library
                        Pos.DB.Rocks.Functions
                        Pos.DB.Rocks.Types
 
-  build-depends:       base
+                       Pos.DB.Txp
+                       Pos.DB.Txp.Logic
+                       Pos.DB.Txp.MemState
+
+                       Pos.DB.Txp.Settings
+                       Pos.DB.Txp.Stakes
+                       Pos.DB.Txp.Utxo
+
+
+  other-modules:       Pos.DB.Txp.Logic.Common
+                       Pos.DB.Txp.Logic.Global
+                       Pos.DB.Txp.Logic.Local
+                       Pos.DB.Txp.MemState.Class
+                       Pos.DB.Txp.MemState.Holder
+                       Pos.DB.Txp.MemState.Metrics
+                       Pos.DB.Txp.MemState.Types
+
+  build-depends:       aeson
+                     , base
                      , bytestring
                      , cardano-sl-binary
                      , cardano-sl-core
                      , cardano-sl-crypto
+                     , cardano-sl-txp
                      , cardano-sl-util
                      , concurrent-extra
                      , conduit
                      , containers
                      , data-default
                      , directory
+                     , ekg-core
                      , ether >= 0.5
                      , filepath
                      , formatting
                      , lens
+                     , log-warper
                      , memory
+                     , mmorph
                      , mtl
+                     , reflection
                      , resourcet
                      , rocksdb-haskell-ng
                      , serokell-util
                      , formatting
+                     , stm
                      , transformers
                      , universum
+                     , unliftio
+                     , unordered-containers
 
   default-language:    Haskell2010
 
