CDEC-461: Invert dependency between update and db packages
In the process, also create the `cardano-sl-db-test` to hold update
related functionality that require types in the `db` package.

--- a/block/cardano-sl-block.cabal
+++ b/block/cardano-sl-block.cabal
@@ -140,6 +140,7 @@ test-suite test
                      , cardano-sl-core-test
                      , cardano-sl-crypto
                      , cardano-sl-crypto-test
+                     , cardano-sl-db-test
                      , cardano-sl-delegation-test
                      , cardano-sl-ssc-test
                      , cardano-sl-update-test
@@ -188,6 +189,7 @@ benchmark bench-block
                      , cardano-sl-core
                      , cardano-sl-core-test
                      , cardano-sl-crypto-test
+                     , cardano-sl-db-test
                      , cardano-sl-delegation-test
                      , cardano-sl-ssc-test
                      , cardano-sl-update-test
