--- a/stack.yaml
+++ b/stack.yaml
@@ -21,6 +21,7 @@ packages:
 - core
 - core/test
 - db
+- db/test
 - lrc
 - lrc/test
 - infra
@@ -306,6 +307,7 @@ ghc-options:
   cardano-sl-crypto:      -Werror -Wcompat -fwarn-redundant-constraints
   cardano-sl-crypto-test: -Werror -Wcompat -fwarn-redundant-constraints
   cardano-sl-db:          -Werror -Wcompat -fwarn-redundant-constraints
+  cardano-sl-db-test:     -Werror -Wcompat -fwarn-redundant-constraints
   cardano-sl-delegation:  -Werror -Wcompat -fwarn-redundant-constraints
   cardano-sl-explorer:    -Werror -Wcompat -fwarn-redundant-constraints
   cardano-sl-generator:   -Werror -Wcompat -fwarn-redundant-constraints
